--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry excluding="test/|movement/WorkingDayMovement.java|movement/StationaryMovement.java|movement/ExternalMovement.java|movement/RandomWalk.java|movement/RandomWaypoint.java|movement/ExternalPathMovement.java|movement/ClusterMovement.java|movement/GridLocation.java|movement/LinearFormation.java|movement/LinearMovement.java|movement/RandomDirection.java|movement/RandomDisasterPoint.java|movement/ModifiedRandomDirection.java" kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/ごつ/Desktop/workspace/08Week/One/src/lib/DTNConsoleConnection.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ごつ/Desktop/workspace/08Week/One/src/lib/ECLA.jar"/>
+	<classpathentry kind="lib" path="/home/morishita/デスクトップ/THE ONE SIMU/src/lib/DTNConsoleConnection.jar"/>
+	<classpathentry kind="lib" path="/home/morishita/デスクトップ/THE ONE SIMU/src/lib/ECLA.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
